# ChangeLog for app-editors/gvim
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.296 2009/09/25 14:31:30 lack Exp $

  24 Sep 2009; Jim Ramsay <lack@gentoo.org> gvim-7.2.238.ebuild,
  +files/gvim.desktop-r2:
  Fix .desktop file and dependency list for bug #249366 and #285106,
  respectively

  26 Jul 2009; Brent Baude <ranger@gentoo.org> gvim-7.2.182.ebuild:
  Marking gvim-7.2.182 ppc64 for bug 257007

*gvim-7.2.238 (22 Jul 2009)

  22 Jul 2009; Jim Ramsay <lack@gentoo.org> +gvim-7.2.238.ebuild:
  Version bump

  22 Jul 2009; Jeremy Olexa <darkside@gentoo.org> gvim-7.2.182.ebuild:
  amd64 stable, security bug 257007

  19 Jul 2009; nixnut <nixnut@gentoo.org> gvim-7.2.182.ebuild:
  ppc stable #257007

  15 Jul 2009; Jeroen Roovers <jer@gentoo.org> gvim-7.2.182.ebuild:
  Stable for HPPA (bug #257007).

  15 Jul 2009; Raúl Porcel <armin76@gentoo.org> gvim-7.2.182.ebuild:
  alpha/ia64 stable wrt #257007

  15 Jul 2009; Christian Faulhammer <fauli@gentoo.org> gvim-7.2.182.ebuild:
  stable x86, security bug 257007

  14 Jul 2009; Ferris McCormick <fmccor@gentoo.org> gvim-7.2.182.ebuild:
  Sparc stable, part of security bug #257007.

*gvim-7.2.182 (18 May 2009)

  18 May 2009; Jim Ramsay <lack@gentoo.org> +gvim-7.2.182.ebuild:
  Version bump: 7.2.182

*gvim-7.1.330 (20 Feb 2009)
*gvim-7.0.243 (20 Feb 2009)

  20 Feb 2009; Jim Ramsay <lack@gentoo.org> +gvim-7.0.243.ebuild,
  +gvim-7.1.330.ebuild:
  Added latest patchlevels of 7.0 and 7.1

*gvim-7.2.108 (19 Feb 2009)

  19 Feb 2009; Jim Ramsay <lack@gentoo.org> -gvim-7.2.021.ebuild,
  +gvim-7.2.108.ebuild:
  Version 7.2.021 wasn't actually applying any patches (It was equivalent to
  7.2), and patchset 108 is now out. Bug #238120

  04 Jan 2009; Ulrich Mueller <ulm@gentoo.org> gvim-7.0.235.ebuild,
  gvim-7.1.123.ebuild, gvim-7.2.ebuild, gvim-7.2.021.ebuild:
  Change virtual/xft dependency to x11-libs/libXft, bug 253771.
