@@ -10,6 +10,7 @@ AUX macvim-info-plist.patch 1133 RMD160 df925c4ff353ee9c1ad2d0cff280f5bef930a40c
 AUX macvim-prefix.patch 894 RMD160 972b9ef4f9fea9c780714890da4498f3df999711 SHA1 0f78b0bd0bb3fe465860c57df91c690a520d3461 SHA256 414de8c9eaffc38f7c5206b21665c9b40633a03b63609bfe6d7fe31cd306400b
 AUX macvim-runtime.patch 647 RMD160 0c1ce9f56898d5c705983f6f16c75d2c3e9360dd SHA1 a69c6820876f9961f1db94ca8f73b76afc668a07 SHA256 a2e4232964df6a2b10c8a51c919fadd7328b273075d870d784db4c8ed787e5c8
 DIST vim-7.2-extra.tar.gz 720290 RMD160 05976466c8a6c1bd2fb2b1d58eb4613947de07df SHA1 6a17629093e59958bff336b6c122dea1b8b1b649 SHA256 20894ac79672160bfc4f1d2f9f9775b34d944762d655307a91ca96d358faa04d
+DIST vim-7.2-gentoo-patches-r2.tar.bz2 8153 RMD160 a58d04d3d68478eff2eea1498172d8567aebd7ff SHA1 412c1b72af5833102967c8916728864e95afb9ea SHA256 4577c92014bcdcbc3203a8919ab74067cb3e7880fa80c6d321dca11fb1f9e406
 DIST vim-7.2-gentoo-patches.tar.bz2 6430 RMD160 c398531043662f4a80f877785d5dc588a529a240 SHA1 2cac942aa01aea4a10bf7e3a8a6805fc37962132 SHA256 04e9857df257f92b901cc578c080047bc95f1da3d69cdd2af943f601d15ac9b2
 DIST vim-7.2-lang.tar.gz 1365638 RMD160 946bd64fbf030b341cc13bee7101f2c0acb26ce2 SHA1 970e0dda7e5b2308cf33488be1ea33d593d951cb SHA256 11607f539a4518b550bf1606b7d3a6f36c1ffdf566c058e7d94bced78034cd5b
 DIST vim-7.2.tar.bz2 7203291 RMD160 eaff64d0fec09d725addf8de569f508b80a5766e SHA1 a4b6641ca528fada71ea77c998a441495ed4984c SHA256 914db0f2205ebd6f02878295ec2506036ea7500399db112c61a01491cd9a1d86
@@ -17,9 +18,11 @@ DIST vim-misc-prefix-5.tar.bz2 1607 RMD160 114fe98db948dc5923082908f0ee647bef2de
 DIST vim-patches-7.2.108.tar 266240 RMD160 17c186cf335f49658ca8daba74955c335f9ef89b SHA1 ee21d342aa1d2fe55a51a2b7b940b83153717a92 SHA256 3b8e6427bc1d39158b4bb3868560d1ae47553e57b9ca870ed83be59bd16065e4
 DIST vim-patches-7.2.182.tar.gz 262578 RMD160 061c6c433ae3f60da8647e8abe349ce7382ac0fc SHA1 ff19ffe70862e44a9cebdfa1a60be32eed2cc9ca SHA256 443da3fdfbb930ab0f27427457e2c4fd52246785af02e961968251d438c7a29d
 DIST vim-patches-7.2.238.tar.gz 360077 RMD160 24c17f698fce7a8e3a55aa0d980ee9296537d285 SHA1 437f982fe80582359c17f7878e3cebfb6c6f89d7 SHA256 fe15b293351fec9e455d9a62a9bcdee3eea0a26b3bf6666c9c85cdc0d61814af
+DIST vim-patches-7.2.264.tar.gz 378748 RMD160 febce4a340caeeb74c511444bd8aacb7550586b3 SHA1 0aace67f5732465045d513eac2396c0c7a4ce0a5 SHA256 36ce5d2a56deddc0f9d0f5e45b0787a4ec503217daca6d3976782da84dcee5fe
 EBUILD gvim-7.2.108.ebuild 1724 RMD160 6b5bd796dfded3e78e792563fd71f5e52f42dfdb SHA1 30329afba5a6f36cde85e89f7400870458a29f74 SHA256 7900b0ea68f1ba7be84e7c1ebd76b59ed2ac6ab0328a6762054260f247b7b91d
 EBUILD gvim-7.2.182.ebuild 1729 RMD160 12d04e8356b559ecd576877709653acd0ab90b2b SHA1 a341e39721c838de541cde0251201a70ca8663f4 SHA256 7a934f62be9eaa606b29e17f98075b8f15bbe6f50b8b466e687cd0a0cd32bc6e
 EBUILD gvim-7.2.238.ebuild 1796 RMD160 f4b17f6f7d67cfbc2952437ee72d76646598c2e4 SHA1 cad87d00c1dc2c6c77bd930f8097676261bf7662 SHA256 49d65fa9fbdbab6386ed4de2a60b60a1aee25e32ea96acf17330abc16e633037
+EBUILD gvim-7.2.264.ebuild 1799 RMD160 b0bd8e5318de026f906c8b594316bf40d19462f3 SHA1 be06fd4578e948c6edf7fde7aac7372f33b4737d SHA256 e37d15099bdd2417478b8fd1816233dcd43b1801668e9e9791a4d17b9d6f51a4
 EBUILD gvim-7.2.ebuild 1643 RMD160 7a3b26ae0b9e248273d719dcf951579be3d8d683 SHA1 713eec6800e9af035dbed47b941fdfd11d565e39 SHA256 fb92fc7bdbcc7d1eb69f20f3467aa6d9378ae57a788ca7473eee136d9880098e
-MISC ChangeLog 40455 RMD160 ebba254e69c794485434a1afd73b0d502b445728 SHA1 e20e36428233f68d2463fe90faac8b28c4e5f99f SHA256 727a19dc4543b94a5f6b20df5df9d2f52ba201242aa4873063475c4c15eb3c92
+MISC ChangeLog 40592 RMD160 868f341ad0be580bd47e82c023d9d2e1d182a9e0 SHA1 080014b0260ac51c08728cd048de12349d8191ab SHA256 56de5d25aec7c974afb7807d15e09c06a065314ae53a0fcacbf0747d98e4b8b7
 MISC metadata.xml 389 RMD160 61d125560aefd4f17d01a23dfdaab8e370551a4d SHA1 150c098bb2a619784b38f24f20f861999e46a1b4 SHA256 40d2b38972733e27a4646a9e61db42c0a581f57930b3efc23b728ef4381d4e66
