@@ -1,6 +1,11 @@
 # ChangeLog for app-editors/gvim
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.296 2009/09/25 14:31:30 lack Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.297 2009/09/27 15:40:12 lack Exp $
+
+*gvim-7.2.264 (27 Sep 2009)
+
+  27 Sep 2009; Jim Ramsay <lack@gentoo.org> +gvim-7.2.264.ebuild:
+  Version bump, plus fix for bug #285502
 
   24 Sep 2009; Jim Ramsay <lack@gentoo.org> gvim-7.2.238.ebuild,
   +files/gvim.desktop-r2:
